new svbtle theme

--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,15 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Chris Lewis
+icon : balloon 
+tagline : Site Tagline
+color : 356AA0
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Chris Lewis 
+  email : chris.lewis2@gmail.com 
+  github : cdlewis 
+  twitter : chrislewis_aus 
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
