--- a/_config.yml
+++ b/_config.yml
@@ -71,16 +71,16 @@ JB :
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
-  comments :
-    provider : false 
-    disqus :
-      short_name : jekyllbootstrap
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook :
-      appid : 123
+  comments:
+    provider: disqus 
+    disqus:
+      short_name: chrisblag
+    livefyre:
+      site_id: 123
+    intensedebate:
+      account: 123abc
+    facebook:
+      appid: 123
       num_posts: 5
       width: 580
       colorscheme: light
