--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ production_url: http://www.chrislewis.com.au
 markdown: kramdown
 kramdown:
     input: GFM
+    enable_coderay: true
+enable_coderay: true
 highlighter: pygments
 author:
     name: Chris Lewis
