--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "./start_dev.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "bundle install"
+    "postinstall": "bundle install",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,12 @@
   },
   "homepage": "http://chrislewis.com.au",
   "dependencies": {
-    "node-sass": "^4.8.3"
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.4",
+    "node-sass": "^4.8.3",
+    "prettier": "^1.11.1"
+  },
+  "lint-staged": {
+    "*.{js,json,scss}": ["prettier --write", "git add"]
   }
 }
