--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 version: 2
 permalink: /:categories/:year/:month/:day/:title
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", "node_modules"]
 relative_permalinks: false
 paginate: 5
 markdown: kramdown
