--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "homepage": "http://chrislewis.com.au",
   "dependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^7.0.4",
+    "husky": "^2.1.0",
+    "lint-staged": "^8.1.5",
     "node-sass": "^4.8.3",
     "prettier": "^1.11.1"
   },
   "lint-staged": {
-    "*.{js,json,scss}": ["prettier --write", "git add"]
+    "*.{js,json,scss}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
