--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./start_dev.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "bundle install",
+    "postinstall": "rbenv install && gem install bundler && rbenv rehash && bundle install",
     "precommit": "lint-staged"
   },
   "repository": {
